# text_classification

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: create-wheel.yml  create_wheel.yml  docker-image.yml  publish-wheel.yml  python-package.yml  test-api.yml
notebooks/: nlp-beginner-text-classification-using-lstm.ipynb
scripts/: download_model.sh
src/text_classification/: __init__.py
src/text_classification/api/: classify_router.py  main.py  models.py  routes.py  schemas.py
src/text_classification/conf/: config.yaml  logging.conf
src/text_classification/core/: classifier.py  classifiers.py  models.py  preprocessing.py  preprocessor.py
src/text_classification/db/: database.py  models.py
tests/: test_classifiers.py  test_preprocessing.py
tests/bruno/: bruno.json  classify.bru
tests/bruno/environments/: dev.bru
tests/units/: test_classifiers.py  test_preprocessing.py
tests/units/api/: test_endpoints.py
tests/units/core/: test_classifier.py  test_preprocessor.py
tests/units/mocks/: mock_model.keras  mock_tokenizer.pickle
tests/units/mocks/conf/: config.yaml
